# gsc-mcp-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: main.rs  types.rs
src/auth/: mod.rs  oauth.rs  service_account.rs  token_store.rs
src/client/: indexing.rs  inspection.rs  mod.rs  search_analytics.rs  sitemaps.rs  sites.rs
src/output/: file.rs  inline.rs  mod.rs
src/tools/: analytics.rs  appearance.rs  discovery.rs  export.rs  indexing.rs  inspection.rs  meta.rs  mod.rs  properties.rs  sitemaps.rs
