[package]
name = "gsc-mcp-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Google Search Console MCP Server. 21 tools for search analytics, URL inspection, sitemaps, indexing, and property management."
license = "MIT"
repository = "https://github.com/eyupcanakman/gsc-mcp-rs"
homepage = "https://github.com/eyupcanakman/gsc-mcp-rs"
readme = "README.md"
keywords = ["gsc", "mcp", "seo", "search-analytics", "search-console"]
categories = ["command-line-utilities", "web-programming"]
exclude = ["docs/", ".github/", "Dockerfile", ".dockerignore"]

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
items_after_statements = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
unreadable_literal = "allow"
similar_names = "allow"
unused_async = "allow"
format_push_string = "allow"
cast_possible_wrap = "allow"
